fix wrong book name, improve book naming

--- a/config_de.cfg
+++ b/config_de.cfg
@@ -1,9 +1,14 @@
 [books]
 1.mose=GEN
+genesis=GEN
 2.mose=EXO
+exodus=EXO
 3.mose=LEV
+levitikus=LEV
 4.mose=NUM
+numeri=NUM
 5.mose=DEU
+deuteronomium=DEU
 josua=JOS
 richter=JDG
 rut=RUT
@@ -36,7 +41,7 @@ nahum=NAM
 habakuk=HAB
 zephanja=ZEP
 haggai=HAG
-sachaja=SAC
+sacharja=ZEC
 maleachi=MAL
 matthäus=MAT
 markus=MAR
