Refactor config files, list translations in help

--- a/config.cfg
+++ b/config.cfg
@@ -1,2 +1,21 @@
-[language]
+[languages]
 de
+en
+
+[translations]
+# german translations
+schlachter=157
+elberfelder=2351
+hfa=73
+luther=3100
+neuegenfer=314
+
+# english translations
+kjv=1
+esv=59
+niv=108
+
+# spanish translations
+lbla=89
+dhh=1845
+rvr=150
