Change book - colossians

--- a/config_de.cfg
+++ b/config_de.cfg
@@ -54,7 +54,7 @@ römer=ROM
 galater=GAL
 epheser=EPH
 philipper=PHI
-kolosser=KOL
+kolosser=COL
 1.thessalonicher=1TH
 2.thessalonicher=2TH
 1.timotheus=1TI
