--- a/config_en.cfg
+++ b/config_en.cfg
@@ -49,7 +49,7 @@ romans=ROM
 galatians=GAL
 ephesians=EPH
 philippians=PHI
-colossians=KOL
+colossians=COL
 1thessalonians=1TH
 2thessalonians=2TH
 1timothy=1TI
