--- a/config_es.cfg
+++ b/config_es.cfg
@@ -49,7 +49,7 @@ romanos=ROM
 gálatas=GAL
 efesios=EPH
 filipenses=PHI
-colosenses=KOL
+colosenses=COL
 1tesalonicenses=1TH
 2tesalonicenses=2TH
 1timoteo=1TI
