--- a/config_fr.cfg
+++ b/config_fr.cfg
@@ -49,7 +49,7 @@ romains=ROM
 galates=GAL
 éphésiens=EPH
 philippiens=PHI
-colossiens=KOL
+colossiens=COL
 1thessaloniciens=1TH
 2thessaloniciens=2TH
 1timothée=1TI
